removed some unwanted overdraws, added more edge-to-edge features

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 29.02.20 17:23
+  ~ Last modified 13.03.20 18:28
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -17,13 +17,12 @@
 		android:id="@+id/main_activity_container"
 		android:layout_height="match_parent"
 		android:layout_width="match_parent"
-		app:paddingRightSystemWindowInsets = "@{true}"
-		app:paddingLeftSystemWindowInsets = "@{true}"
+		app:paddingRightSystemWindowInsets="@{true}"
+		app:paddingLeftSystemWindowInsets="@{true}"
 		>
 
 		<ImageView
 			android:id="@+id/ivMainSplashLogo"
-			android:background="@color/black"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:src="@drawable/logo_loading"
