--- a/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_info_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 07.03.20 18:13
+  ~ Last modified 13.03.20 16:33
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -24,7 +24,6 @@
 	<FrameLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@color/transparent"
 		>
 
 		<androidx.cardview.widget.CardView
@@ -32,13 +31,12 @@
 			android:layout_width="wrap_content"
 			android:layout_marginTop="@dimen/general_margin_16"
 			android:layout_marginEnd="@dimen/general_margin_16"
-			app:cardBackgroundColor="@color/colorPrimaryDark"
+			app:cardBackgroundColor="@color/transparent"
 			app:cardCornerRadius="15dp">
 
 			<ImageView
 				android:layout_width="@dimen/rvSettingsEditPhotoElementWidth"
 				android:layout_height="@dimen/rvSettingsEditPhotoElementHeight"
-				android:background="@color/colorPrimary"
 				android:layout_gravity="center"
 
 				android:scaleType="centerCrop"
@@ -60,7 +58,7 @@
 			app:backgroundTint="@color/material_red_a700"
 			app:iconSize="24dp"
 			app:icon="@drawable/ic_clear_24dp"
-			app:elevation="@null"
+			app:elevation="0dp"
 			app:shapeAppearanceOverlay="@style/MyAppShapeAppearanceOverlay.Button.Rounded"
 
 			style="@style/Widget.MaterialComponents.Button.Icon"
