--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -2,14 +2,15 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 26.01.20 18:09
+  ~ Last modified 13.03.20 15:15
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools">
 
@@ -26,7 +27,8 @@
 		android:id="@+id/containerCards"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:background="@color/colorPrimaryDark">
+		android:background="@color/colorPrimaryDark"
+		>
 
 		<com.yuyakaido.android.cardstackview.CardStackView
 			android:id="@+id/cardStackView"
@@ -35,6 +37,8 @@
 			android:clipToPadding="false"
 			android:padding="@dimen/general_margin_16"
 			android:visibility='@{viewModel.showLoading ? View.INVISIBLE : View.VISIBLE, default = "invisible"}'
+
+			app:paddingTopSystemWindowInsets="@{true}"
 
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +69,7 @@
 
 	        android:text="There is no available users matching your preferences"
 		    android:textSize="18sp"
-		    style="@style/regular_text_white85op"
+		    style="@style/regular_text"
 
 		    android:visibility='@{viewModel.showTextHelper ? View.VISIBLE : View.INVISIBLE, default = "invisible"}'
 	        app:layout_constraintBottom_toBottomOf="parent"
