--- a/app/src/main/res/layout/fragment_cards_item.xml
+++ b/app/src/main/res/layout/fragment_cards_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 11.03.20 20:22
+  ~ Last modified 13.03.20 17:21
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -26,13 +26,8 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 
-		android:background="?attr/selectableItemBackground"
-		android:foreground="?attr/selectableItemBackground"
-
-		app:cardUseCompatPadding="true"
-		app:cardPreventCornerOverlap="false"
 		app:cardCornerRadius="10dp"
-		app:cardBackgroundColor="@color/colorPrimary" >
+		app:cardBackgroundColor="@color/transparent" >
 
 		<androidx.constraintlayout.widget.ConstraintLayout
 			android:id="@+id/cardContainer"
@@ -56,7 +51,7 @@
 				android:layout_marginStart="2dp"
 				android:layout_marginEnd="2dp"
 				android:layout_gravity="bottom"
-				android:background="@color/transparent"
+				android:background="@null"
 
 				app:tabBackground="@drawable/tab_line_unselected_state"
 				app:tabIndicatorColor="@color/white"
@@ -69,6 +64,7 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toTopOf="@id/viewPagerCardPhotoList"
 				/>
 
 
@@ -81,7 +77,7 @@
 
 				android:text="@{bindItem.baseUserInfo.name, default = @string/default_name}"
 				android:textSize="24sp"
-				style="@style/regular_text_white85op"
+				style="@style/regular_text"
 
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintBottom_toBottomOf="parent"
@@ -91,6 +87,7 @@
 				android:id="@+id/previousImage"
 				android:layout_width="100dp"
 				android:layout_height="0dp"
+				android:background="@null"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				app:layout_constraintBottom_toTopOf="@id/tvCardUserName"
@@ -100,6 +97,7 @@
 				android:id="@+id/nextImage"
 				android:layout_width="100dp"
 				android:layout_height="0dp"
+				android:background="@null"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintTop_toTopOf="parent"
 				app:layout_constraintBottom_toBottomOf="parent"
