--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 07.03.20 17:18
+  ~ Last modified 13.03.20 17:56
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -25,7 +25,8 @@
 
 	<androidx.coordinatorlayout.widget.CoordinatorLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:background="@color/colorPrimaryDark">
 
 		<androidx.core.widget.NestedScrollView
 			android:layout_width="match_parent"
@@ -34,12 +35,12 @@
 			android:overScrollMode="never"
 			android:fillViewport="true">
 
-
 			<androidx.constraintlayout.widget.ConstraintLayout
 				android:id="@+id/containerSettings"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:animateLayoutChanges="true">
+				android:animateLayoutChanges="true"
+				app:paddingTopSystemWindowInsets="@{true}">
 
 				<androidx.appcompat.widget.Toolbar
 					android:id="@+id/toolbarSettings"
@@ -51,7 +52,8 @@
 
 					app:title="Настройки"
 					app:titleTextAppearance="@style/ToolbarTitle"
-					app:titleTextColor="@color/white_85"
+					app:titleTextColor="@color/white"
+
 
 					app:layout_constraintBottom_toTopOf="@id/rvSettingsUserPhotosList"
 					app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +87,7 @@
 					android:src="@drawable/ic_add_a_photo_24dp"
 
 					app:backgroundTint="@color/material_orange_a700"
-					app:rippleColor="@color/black_50"
+					app:elevation="@null"
 
 					app:layout_constraintBottom_toBottomOf="@id/rvSettingsUserPhotosList"
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
@@ -103,11 +105,12 @@
 					android:text="@{viewModel.currentUser.baseUserInfo.name+ `, `+ viewModel.currentUser.baseUserInfo.age, default = @string/default_name}"
 					android:textSize="22sp"
 
-					style="@style/regular_text_white85op"
+					style="@style/regular_text"
 
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
 					app:layout_constraintStart_toStartOf="@id/guidelineStart"
-					app:layout_constraintTop_toBottomOf="@id/fabSettingsAddPhoto"/>
+					app:layout_constraintTop_toBottomOf="@id/fabSettingsAddPhoto"
+					app:layout_constraintBottom_toTopOf="@id/tvSettingsCity"/>
 
 				<com.google.android.material.textview.MaterialTextView
 					android:id="@+id/tvSettingsCity"
@@ -117,11 +120,12 @@
 					android:text="@{viewModel.currentUser.cityToDisplay, default = @string/default_city}"
 					android:textSize="22sp"
 
-					style="@style/regular_text_white85op"
+					style="@style/regular_text"
 
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
 					app:layout_constraintStart_toStartOf="@id/guidelineStart"
 					app:layout_constraintTop_toBottomOf="@id/tvSettingsNameAge"
+					app:layout_constraintBottom_toTopOf="@id/tvSettingsWantToGoHeader"
 					/>
 
 				<com.google.android.material.textview.MaterialTextView
@@ -132,7 +136,7 @@
 
 					android:text="Хочу посетить"
 					android:textSize="24sp"
-					style="@style/medium_text_white85op"
+					style="@style/medium_text"
 
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
 					app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -168,7 +172,7 @@
 
 					android:text="Обо мне"
 					android:textSize="24sp"
-					style="@style/medium_text_white85op"
+					style="@style/medium_text"
 
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
 					app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -185,7 +189,7 @@
 					android:text="@{viewModel.currentUser.aboutText}"
 					android:textSize="18sp"
 
-					style="@style/regular_text_white85op"
+					style="@style/regular_text"
 
 					app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
 					app:layout_constraintStart_toStartOf="@id/guidelineStart"
@@ -226,7 +230,7 @@
 			app:layout_anchorGravity="bottom|end"
 
 			app:backgroundTint="@color/amethyst"
-			app:rippleColor="@color/black_50"
+
 			/>
 	</androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
