--- a/app/src/main/res/layout/fragment_settings_photo_item.xml
+++ b/app/src/main/res/layout/fragment_settings_photo_item.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 07.03.20 17:16
+  ~ Last modified 13.03.20 16:39
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -24,15 +24,13 @@
 	<androidx.cardview.widget.CardView
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
-
-		app:cardBackgroundColor="@color/colorPrimaryDark"
+		app:cardBackgroundColor="@color/transparent"
 		app:cardCornerRadius="15dp">
 
 		<ImageView
 			android:id="@+id/ivUserItemPhoto"
 			android:layout_width="@dimen/rvSettingsPhotoElementWidth"
 			android:layout_height="300dp"
-			android:background="@color/colorPrimary"
 			android:scaleType="center"
 
 			app:bindImageUrl="@{bindItem.fileUrl}"
