--- a/app/src/main/res/layout/loading.xml
+++ b/app/src/main/res/layout/loading.xml
@@ -1,30 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 13.03.20 17:23
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
-	android:layout_height="wrap_content"
-	android:layout_width="wrap_content"
+<ImageView
+	android:id="@+id/iv_loading"
+	android:layout_width="120dp"
+	android:layout_height="120dp"
+	android:src="@drawable/loading"
+	tools:ignore="ContentDescription"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
-
-	<ImageView
-		android:id="@+id/iv_loading"
-		android:layout_width="120dp"
-		android:layout_height="120dp"
-		android:src="@drawable/loading"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:ignore="ContentDescription" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+	xmlns:tools="http://schemas.android.com/tools" />
