--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 12.03.20 15:54
+  ~ Last modified 13.03.20 16:36
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -31,6 +31,8 @@
 		<item name="android:colorBackground">@color/black</item>
 		<item name="colorOnBackground">@color/white</item>
 
+		<item name="android:textColor">@color/white</item>
+
 		<!-- display menu popup under toolbar -->
 		<item name="actionOverflowMenuStyle">@style/MyOverFlowMenuStyle</item>
 
@@ -40,7 +42,7 @@
 
 		<item name="android:navigationBarColor">@color/black_1</item>
 		<item name="android:statusBarColor">@color/black_1</item>
-		<item name="android:windowBackground">@color/colorPrimaryDark</item>
+		<item name="android:windowBackground">@null</item>
 
 		<item name="materialAlertDialogTheme">@style/MyMaterialAlertDialog</item>
 
@@ -56,7 +58,7 @@
 	<!-- custom appearance pop up menu items -->
 	<style name="MyMenuPopupStyle" parent="Widget.AppCompat.PopupMenu">
 		<item name="android:itemBackground">@color/colorPrimary</item>
-		<item name="android:itemTextAppearance">@style/regular_text_white85op</item>
+		<item name="android:itemTextAppearance">@style/regular_text</item>
 	</style>
 
 	<!-- display menu popup under toolbar -->
@@ -152,7 +154,6 @@
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:fontFamily">@font/rubik_medium</item>
-		<item name="android:textColor">@color/white</item>
 		<item name="android:textSize">@dimen/auth_tv_slogan1</item>
 	</style>
 
@@ -161,7 +162,6 @@
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:fontFamily">@font/rubik_medium</item>
-		<item name="android:textColor">@color/white</item>
 		<item name="android:textSize">@dimen/auth_tv_slogan2</item>
 	</style>
 
@@ -177,37 +177,35 @@
 	<!-- uncollapsed toolbar profile title -->
 	<style name="CollapsingToolbarExpandedTitleWhite" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_medium</item>
-		<item name="android:textColor">@color/white_85</item>
 		<item name="android:textSize">32sp</item>
 	</style>
 
 	<!-- toolbar title -->
 	<style name="ToolbarTitle" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
-		<item name="android:textColor">@color/white</item>
 		<item name="android:textSize">20sp</item>
 	</style>
 
 
 	<!-- general text styles -->
-	<style name="bold_text_white85op" parent="Widget.AppCompat.TextView">
+	<style name="bold_text" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_bold</item>
-		<item name="android:textColor">@color/white_85</item>
+
 	</style>
 
-	<style name="medium_text_white85op" parent="Widget.AppCompat.TextView">
+	<style name="medium_text" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_medium</item>
-		<item name="android:textColor">@color/white_85</item>
+
 	</style>
 
-	<style name="regular_text_white85op" parent="Widget.AppCompat.TextView">
+	<style name="regular_text" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
-		<item name="android:textColor">@color/white_85</item>
+
 	</style>
 
-	<style name="light_text_white85op" parent="Widget.AppCompat.TextView">
+	<style name="light_text" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_light</item>
-		<item name="android:textColor">@color/white_85</item>
+
 	</style>
 
 
